# Rural-AI-Mapping

./: .gitignore  Dockerfile  LICENSE  Makefile  PROJECT_BIBLE.md  README.md  bias_search.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  train.py
config/: platform_config.synthetic.json
demo_dataset/: demo_manifest.json
demo_ui/: README.md  app.py  inference_wrapper.py
docs/: ARCHITECTURE.generated.md  ARCHITECTURE.md  EVALUATION.md  SYSTEM_OVERVIEW.md  TRAINING.md  demo_instructions.md  demo_script.txt
outputs/: calibrated_eval_results.json
production/: README.md  api.py
scripts/: build_judge_package.py  build_project_bible.py  build_synthetic_fixtures.py  export_vectors.py  fetch_artifacts.sh  generate_judge_package.py  judge_verify.sh  package_production_release.sh  production_certification_v2.py  reproduce.sh  start_demo_gpu.sh  verify_production_benchmark.sh
src/: logging_config.py  postprocessing.py
submission/: AI_TRACE_AUDIT.md  COMPETITION_READINESS_REPORT.md  COMPETITIVE_POSITIONING.md  DEAD_CODE_AUDIT.md  DEMO_PRESENTATION_READY.md  DEMO_SCRIPT.md  FINAL_SUBMISSION_REVIEW.md  HOSTILE_REVIEW.md  IF_WE_HAD_3_MONTHS.md  JUDGE_FIRST_IMPRESSION.md  JUDGE_OBJECTIONS.md  JUDGE_QA_MASTER.md  MD_CLEANUP_REPORT.md  ONE_PAGE_EXECUTIVE_BRIEF.md  PRESENTATION_AUDIT.md  REPOSITORY_REVIEW.md  ROLLBACK_MANIFEST_2026-06-27.txt  SANITIZATION_VERIFICATION.md  STORAGE_REDUCTION_REPORT.md  SUBMISSION_AUDIT.md  SUBMISSION_LOCK.md
tests/: conftest.py  test_api.py  test_calibrated_engine.py  test_config_security_eval.py  test_data_validator.py  (+9 more)
(+167 files in other folders)
