[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svamitva-geospatial"
version = "1.0.0"
description = "SVAMITVA geospatial AI segmentation pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "torch==2.2.2",
  "torchvision==0.17.2",
  "segmentation-models-pytorch==0.4.0",
  "timm==0.9.16",
  "rasterio==1.3.10",
  "geopandas==0.14.4",
  "shapely==2.0.4",
  "pyproj==3.6.1",
  "fiona==1.9.6",
  "albumentations==1.4.8",
  "opencv-python-headless==4.10.0.84",
  "numpy==1.26.4",
  "pandas==2.2.2",
  "matplotlib==3.8.4",
  "tqdm==4.66.4",
  "fastapi==0.111.0",
  "uvicorn==0.30.1",
  "pydantic==2.8.2",
  "Pillow==10.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "pytest-cov==5.0.0",
  "streamlit==1.36.0",
]
demo = ["streamlit==1.36.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src", "production"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
fail_under = 40
show_missing = true
